cmake compiles now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required (VERSION 2.6)
 project (qmread)
-add_executable(qmread main.cpp)
+add_executable(qmread main.cpp lmfile.cpp)
+
+
 
 # The version number.
-set (Tutorial_VERSION_MAJOR 1)
-set (Tutorial_VERSION_MINOR 0)
+#set (Tutorial_VERSION_MAJOR 1)
+#set (Tutorial_VERSION_MINOR 0)
  
 # configure a header file to pass some of the CMake settings
 # to the source code
