--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 project (qmread)
-add_executable(qmr main.cpp lmfile.cpp)
+add_executable(qmr main.cpp lmfile.cpp histogram.cpp)
 
 
 
@@ -16,3 +16,12 @@ add_executable(qmr main.cpp lmfile.cpp)
 #  )
 
 # CMAKE_CXX_FLAGS="O2"
+
+
+# Locate GTest
+find_package(GTest REQUIRED)
+include_directories(${GTEST_INCLUDE_DIRS})
+ 
+# Link runTests with what we want to test and the GTest and pthread library
+add_executable(runTests tests.cpp)
+target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
