--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 enable_testing()
 
 include(CheckCXXCompilerFlag)
+
 #CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
 #CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
 #if(COMPILER_SUPPORTS_CXX11)
@@ -11,7 +12,7 @@ include(CheckCXXCompilerFlag)
 #        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
 #endif()
 
-SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11" )
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system" )
 
 cmake_minimum_required (VERSION 2.6)
 project (qmread)
@@ -33,10 +34,21 @@ add_library(lm SHARED lmfile.cpp histogram.cpp)
 
 # Locate GTest
 find_package(GTest REQUIRED)
+
 include_directories(${GTEST_INCLUDE_DIRS})
  
 # Link runTests with what we want to test and the GTest and pthread library
 add_executable(runTests tests.cpp)
-target_link_libraries(runTests lm ${GTEST_LIBRARIES} pthread)
 
 add_test(all runTests)
+
+
+set(Boost_USE_STATIC_LIBS OFF) 
+set(Boost_USE_MULTITHREADED ON)  
+set(Boost_USE_STATIC_RUNTIME OFF) 
+find_package(Boost 1.56.0 COMPONENTS filesystem program_options) 
+
+if(Boost_FOUND)
+  include_directories(${Boost_INCLUDE_DIRS})
+  target_link_libraries(runTests lm ${GTEST_LIBRARIES} pthread ${Boost_LIBRARIES})
+endif()
