add check, if file exists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,7 +44,7 @@ add_test(all runTests)
 
 
 set(Boost_USE_STATIC_LIBS OFF) 
-set(Boost_USE_MULTITHREADED ON)  
+set(Boost_USE_MULTITHREADED OFF)  
 set(Boost_USE_STATIC_RUNTIME OFF) 
 find_package(Boost 1.56.0 COMPONENTS filesystem program_options) 
 
@@ -52,3 +52,6 @@ if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
   target_link_libraries(runTests lm ${GTEST_LIBRARIES} pthread ${Boost_LIBRARIES})
 endif()
+
+
+
