--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,32 +2,19 @@ enable_testing()
 
 include(CheckCXXCompilerFlag)
 
-#CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-#CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-#if(COMPILER_SUPPORTS_CXX11)
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-#elseif(COMPILER_SUPPORTS_CXX0X)
-#    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-#else()
-#        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-#endif()
-
+# CMAKE_CXX_FLAGS="O2"
 SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system -lboost_program_options" )
 
 cmake_minimum_required (VERSION 2.6)
 project (qmread)
-#add_executable(qmr main.cpp lmfile.cpp histogram.cpp)
+
 add_executable(qmr main.cpp)
 
 target_link_libraries(qmr lm )
 
 # set(CMAKE_BUILD_TYPE Release)
 
-# The version number.
-#set (Tutorial_VERSION_MAJOR 1)
-#set (Tutorial_VERSION_MINOR 0)
 
-# CMAKE_CXX_FLAGS="O2"
 
 
 add_library(lm SHARED lmfile.cpp histogram.cpp)
@@ -45,7 +32,7 @@ add_test(all runTests)
 
 set(Boost_USE_STATIC_LIBS OFF) 
 set(Boost_USE_MULTITHREADED OFF)  
-set(Boost_USE_STATIC_RUNTIME OFF) 
+set(Boost_USE_STATIC_RUNTIME ON) 
 find_package(Boost 1.56.0 COMPONENTS filesystem program_options) 
 
 if(Boost_FOUND)
